# assetchunk

./: Cargo.toml  README.md  build.rs
cli/: Cargo.toml  dope.manifest.asset
cli/src/: main.rs  pack.rs  term.rs
ctest/: lib.h  main.c  out.chunk.asset  out.manifest.asset
ctest/assets/: event_script.lua
src/: lib.rs
