workspace = { members = ["cli"] }

[package]
name = "assetchunk"
version = "0.0.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "assetchunk"
crate-type = ["cdylib", "lib"]

[dependencies]
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
toml = "0.8.8"
file-format = "0.22.0"