[package]
name = "assetchunk-cli"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
assetchunk = {path = "../"}
crossterm = {version="0.27.0", features = ["event-stream"]}
scopeguard = "1.1.0"
clap = { version = "4.4.8", features = ["derive"] }

